// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListResultsCard renders correctly when batch job fails 1`] = `
<Panel
  sectioned={true}
>
  <div
    className="IconWrapper Failed"
  >
    <ErrorOutline
      size={40}
    />
  </div>
  <h6>
    Validation Results
  </h6>
  <div
    className="Spacer"
  />
  <LabelledValue
    label="Uploaded"
  >
    <p
      className="RightAlign NoWrap"
    >
      Nov 1 2018, 1:16pm
    </p>
  </LabelledValue>
  <LabelledValue
    label="Status"
  >
    <h6
      className="RightAlign"
    >
      Failed. Please try again.
    </h6>
  </LabelledValue>
</Panel>
`;

exports[`ListResultsCard renders correctly when complete 1`] = `
<Panel
  sectioned={true}
>
  <div
    className="IconWrapper Complete"
  >
    <CheckCircleOutline
      size={40}
    />
  </div>
  <h6>
    Validation Results
  </h6>
  <div
    className="Spacer"
  />
  <LabelledValue
    label="Uploaded"
  >
    <p
      className="RightAlign NoWrap"
    >
      Nov 1 2018, 1:16pm
    </p>
  </LabelledValue>
  <LabelledValue
    label="Status"
  >
    <h6
      className="RightAlign"
    >
      Completed
    </h6>
  </LabelledValue>
  <DownloadLink
    color="orange"
    component={[Function]}
    fullWidth={true}
    to="testfile.csv"
  >
    Download Rejected Recipients
  </DownloadLink>
</Panel>
`;

exports[`ListResultsCard renders correctly when loading and status is unknown 1`] = `
<Panel>
  <div
    className="LoadingWrapper"
  >
    <LoadingSVG
      size="Small"
    />
  </div>
</Panel>
`;

exports[`ListResultsCard renders correctly when not complete 1`] = `
<Panel
  sectioned={true}
>
  <div
    className="IconWrapper"
  >
    <InsertDriveFile
      size={40}
    />
  </div>
  <h6>
    Validation Results
  </h6>
  <div
    className="ProcessingWrapper"
  >
    <LoadingSVG
      size="Small"
    />
  </div>
  <LabelledValue
    label="Uploaded"
  >
    <p
      className="RightAlign NoWrap"
    >
      Nov 1 2018, 1:16pm
    </p>
  </LabelledValue>
  <LabelledValue
    label="Status"
  >
    <h6
      className="RightAlign"
    >
      Processing
    </h6>
  </LabelledValue>
</Panel>
`;
